Feat: Created new HTTP method getByIsbn and implemented it, too getById
